--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <sonar.sources>src/main/java/com/kavinschool/verify</sonar.sources>
         <sonar.tests>src/test/java/com/kavinschool/testng/examples</sonar.tests>
-        <sonar.coverage.exclusions></sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>src/main/java/com/kavinschool/verify</sonar.coverage.exclusions>
         <sonar.links.homepage>https://sonarqube-azureappservice0a95.azurewebsites.net/dashboard?id=KangsCalcTest
         </sonar.links.homepage>
         <sonar.host.url>http://ec2-54-219-40-60.us-west-1.compute.amazonaws.com:9000/sonarqube</sonar.host.url>
